<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mmx.fsk.MainActivity">

    <Button
        android:text="@string/decode_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bDecodeLive"
        android:layout_marginTop="8dp"/>
    <Button
        android:text="@string/live8bit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bLive8Bit" />
    <Button
        android:text="@string/pcm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bPCM" />
    <Button
        android:text="@string/terminal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bTerminal" />
    <Button
        android:text="@string/wav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bWAV" />
    <Button
        android:text="@string/encode_live_mono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bEncodeLiveMono" />
    <Button
        android:text="@string/encode_live_stereo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bEncodeLiveStereo" />
</LinearLayout>
